<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 george wieggers.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      george wieggers - initial API and implementation
-->
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:columnCount="3"
        android:rowCount="4"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/lblConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:text="@string/connect_to_qu_16"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_columnSpan="3" />

        <TextView
            android:id="@+id/lblIPAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_ip_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtIPAddress"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/connect" />

        <TextView
            android:id="@+id/lblTryDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/try_demo_mode"
            android:layout_columnSpan="2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnDemo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/demo_mode" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_gravity="bottom"
            android:layout_columnSpan="3" />

    </GridLayout>
